* Modified application urls. Previously bookmarked urls may no longer work.
* Added ability to create reports based on FreeMarker templates
* Added ability to create reports based on Thymeleaf templates
* Added ability to create reports based on MS Word (docx), LibreOffice Writer (odt) and MS PowerPoint (pptx) templates
* Added docx, odt, ods report formats for tabular and jasper reports
* Added gridstack dashboard report type
* Have syntax highlighting during report creation
* Added tabbed dashboards option
* Added ReactPivot report type
* Added PivotTable.js report types
* Added Dygraphs report types
* Added DataTables report types
* Added C3.js report type
* Added Chart.js report type
* Added Datamaps report types
* Added Leaflet report type
* Added OpenLayers report type
* Added ability to create csv output jobs
* Added ability to create fixed width output jobs
* Allow multi-value parameters with Oracle databases to have more than 1000 items
* Added ability to schedule dashboard reports and output them as pdf
* Requires Internet Explorer 8+, or recent versions of other browsers
* Requires Java 7
* Requires Servlet 3.0
* Updated libraries, including jasperreports, quartz, jxls, among others
* Changed license from GPLv2 to GPLv3

ART 2.5.4
* Added Lithuanian translation (thanks to Dalius Guzauskas)
* Added Polish translation (thanks to Pawel Osuch)
* Updated German translation
* Minor css updates

ART 2.5.3
* Fix for incorrect handling of " in parameter value
* Fix for numbers not sorting correctly in Italian locale
* Fix for error when using Conditional Email Output (Inline) jobs
* Fix for null pointer exception when clob field (e.g. varchar(max)) is null
* Fix for error when running a job that uses a jXLS spreadsheet query
* Fix for IllegalArgumentException when using Tomcat 7.0.57+ or 8.0.15+
* Included German translation (thanks to Carsten Pohle)

ART 2.5.2
* Fix for error when drill down column has a null value