@@ -56,17 +56,8 @@ public class XYChart extends Chart implements XYToolTipGenerator, XYItemLinkGene
 		ResultSetMetaData rsmd = rs.getMetaData();
 		int columnCount = rsmd.getColumnCount();
 
-		int optionsColumnCount = 0;
-		for (int i = 0; i < columnCount; i++) {
-			int columnIndex = i + 1;
-			String columnName = rsmd.getColumnLabel(columnIndex);
-			if (isOptionsColumn(columnName)) {
-				optionsColumnCount++;
-			}
-		}
-
 		boolean dynamicSeries = false;
-		int dynamicSeriesColumnCount = 3 + optionsColumnCount; //xValue, yValue, seriesName
+		int dynamicSeriesColumnCount = 3; //xValue, yValue, seriesName
 		if (isHasHyperLinks()) {
 			if (columnCount == dynamicSeriesColumnCount + 1) { //+1 for hyperlink column
 				dynamicSeries = true;
@@ -76,8 +67,6 @@ public class XYChart extends Chart implements XYToolTipGenerator, XYItemLinkGene
 				dynamicSeries = true;
 			}
 		}
-
-		setSeriesColorOptions(rsmd);
 
 		int seriesCount = 0; //start series index at 0 as generateLink() uses zero-based indices to idenfity series
 		Map<Integer, XYSeries> finalSeries = new HashMap<>(); //<series index, series>
